--- a/site/index.html
+++ b/site/index.html
@@ -4,13 +4,15 @@
 	<title>This is tutle</title>
 </head>
 <body>
-	<h1>First git page</h1>
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-	consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-	proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-	<small>Zole</small>
+	<div>Dear <span>all	</span> end of div.</div>
+	<span>Lorem ipsum dolor.</span>
+	<a href="#">HTML, CSS</a>
+	<div>
+		Lorem ipsum dolor sit amet, consectetur.
+	</div>
+	<div>
+		Thank you,
+		Zoran Ivanovic.
+	</div>
 </body>
 </html>
